--- a/templates/index.html
+++ b/templates/index.html
@@ -80,9 +80,9 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="http://blog.amaryellowpages.com/wp-content/uploads/2017/04/IMG_1947.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey you {{name}}!</h1>
+                        <h1 class="name">Hey there {{name}}!</h1>
                         <hr class="star-light">
                         <span class="skills">Python Developer - Flask Framework</span>
                     </div>
