--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="http://blog.amaryellowpages.com/wp-content/uploads/2017/04/IMG_1947.jpg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="http://blog.amaryellowpages.com/wp-content/uploads/2017/04/IMG_1947.jpg" alt="Asif_Imtiaz_Ahmed" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey there {{name}}!</h1>
                         <hr class="star-light">
@@ -167,8 +167,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
-                            <br>United States</p>
+                        <p>Toronto, Ontario,
+                            <br>Canada</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3></h3>
